# Project-M

./: Makefile.in  ProjectReport.tex  README.md  configure.ac
App/ProjectM/: ProjectM.pro  jsexecengine.cpp  jsexecengine.h  logger.cpp  logger.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  magic.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  project.cpp  project.h  projectsettings.cpp  projectsettings.h  projectwindow.cpp  projectwindow.h  projectwindow.ui  registration.cpp  registration.h  registration.ui  service.cpp  service.h  testpage.cpp  testpage.h  testpage.ui
App/ProjectM/android/: AndroidManifest.xml
App/ProjectM/android/src/space/hobson/ProjectM/: Helpers.java  MService.java
DocFiles/: ProjectM-2.xml
Meetings/: Team Meeting 1.md
Server/: Explorer.hs  Makefile  Primes.hs  ProjectM.hs  main.hs  testsvr.conf
Server/root/: index.html
Server/root/cgi-bin/: build.cgi  download.cgi
